<resources>
    <string name="fail">fail</string>
    <string name="app_name">AliFaceEngineDemo</string>
    <string name="welcome_to_use">Welcome To Use</string>
    <string name="ali_face_engine">AliFaceEngine</string>
    <string name="please_select">Please select the mode of operation</string>
    <string name="pure_end">Terminate</string>
    <string name="cloud_end">Cloud</string>
    <string name="try_use">Try</string>
    <string name="auth">Authorize</string>
    <string name="set_cloud_face_database">Set cloud face database</string>
    <string name="set_mode">Run mode</string>
    <string name="mode">mode</string>
    <string name="mode_terminal">terminal</string>
    <string name="mode_cloud">cloud</string>
    <string name="use_cloud">Use cloud</string>
    <string name="use">use</string>
    <string name="not_use">not use</string>
    <string name="system_message">System Message</string>
    <string name="error_code">Error Code</string>
    <string name="contact">Please contact customer service staff</string>
    <string name="sure">Sure</string>
    <string name="menu_title">AliFaceEngineDemo</string>
    <string name="face_recognize">Face Recognize</string>
    <string name="create_group">Create Group</string>
    <string name="face_library">Face Library</string>
    <string name="register_photo">Register Photo</string>
    <string name="register_camera">Register Video</string>
    <string name="recognize_photo">Recognize Photo</string>
    <string name="extract_feature">Extract feature</string>
    <string name="recognize_camera">Recognize Video</string>
    <string name="face_verify">Face Verify</string>
    <string name="verify_photo">Verify Photo</string>
    <string name="verify_camera">Verify Video</string>
    <string name="please_enter">Please input relevant information</string>
    <string name="user_name">UserName:</string>
    <string name="pass_word">PassWord:</string>
    <string name="cancel">Cancel</string>
    <string name="model_type">Type:</string>
    <string name="big">Big</string>
    <string name="small">Small</string>
    <string name="group_name">GroupName:</string>
    <string name="dialog_message_group_name">group name can not be empty</string>
    <string name="auth_key">Key</string>
    <string name="dialog_message_auth_key_is_empty">Auth key is empty</string>
    <string name="dialog_message_auth_success">Auth success</string>
    <string name="dialog_message_auth_fail">Auth fail</string>
    <string name="please_enable_cloud_run_mode">please enable cloud run mode first</string>
    <string name="dialog_message_ip_empty">IP is empty</string>
    <string name="dialog_message_port_empty">Port is empty</string>
    <string name="dialog_message_username_empty">user name is empty</string>
    <string name="dialog_message_userpsw_empty">password is empty</string>
    <string name="please_set_cloud_face_database">Please enable cloud face database first</string>
    <string name="please_create_group_first">please create group first</string>
    <string name="dialog_message_type">Please Select Type</string>
    <string name="dialog_message_success">Group Create Success</string>
    <string name="dialog_message_amend_success">modify success</string>
    <string name="dialog_message_failure">Create Failure,Error Code:</string>
    <string name="dialog_message_amend_failure">Amend Failure,Error Code:</string>
    <string name="face_library_title">Face Library</string>
    <string name="face_library_peolpe">People</string>
    <string name="enter_new_group_name">Please enter a new group name</string>
    <string name="dialog_message_delete_group">Are you sure you want to delete this group?</string>
    <string name="dialog_message_delete_success">Delete Success</string>
    <string name="dialog_message_delete_failure">Delete Failure,Error Code: </string>
    <string name="dialog_message_delete_person">Are you sure you want to delete </string>
    <string name="current_group_name">Current group name :</string>
    <string name="new_group_name">New group name :</string>
    <string name="current_group">Current group :</string>
    <string name="total_number">Total Number :</string>
    <string name="modify_group_name">ModifyGroupName</string>
    <string name="delete_current_group">DeleteCurrentGroup</string>
    <string name="all_groups">FaceLibrary-AllGroups</string>
    <string name="personal">PersonalInformation</string>
    <string name="name">Name :</string>
    <string name="feature_name">Feature Name:</string>
    <string name="photo">Photo :</string>
    <string name="please_fill">Please fill in the complete information</string>
    <string name="add_success">Add Success</string>
    <string name="add_failure">Add Failure,Error Code :</string>
    <string name="please_select_photo">Please select photos</string>
    <string name="mismatch">Mismatch</string>
    <string name="select_photo">SelectPhoto</string>
    <string name="no_detected">No face was detected</string>
    <string name="select_face">Select the face</string>
    <string name="contrasting">ContrastingPhotos:</string>
    <string name="contrast">ContrastPhotos:</string>

</resources>
