<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/currency_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_name"
            android:textSize="20sp"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/activity_recognizephoto_sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/photo"
            android:textSize="20sp"
            android:gravity="center"/>
        <Button
            android:id="@+id/activity_recognizephoto_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/select_photo"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/activity_recognizephoto_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center">
    <FrameLayout
        android:id="@+id/activity_recognizephoto_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <ImageView
        android:id="@+id/activity_recognizephoto_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:src="@drawable/photo_back"/>
    </FrameLayout>
    </RelativeLayout>
</LinearLayout>